--- a/Stock_Trading_AC.ipynb
+++ b/Stock_Trading_AC.ipynb
@@ -1583,7 +1583,12 @@
     "        super().clear_memory()\n",
     "        self.logits=[]\n",
     "        self.critic_values=[]\n",
-    "        self.action_probs=[]"
+    "        self.action_probs=[]\n",
+    "        \n",
+    "    def deterministic_action(self,logits,value):\n",
+    "        probs= tf.nn.softmax(logits)\n",
+    "        self.action = tf.math.top_k(probs,k=1).indices.numpy()\n",
+    "        return self.action"
    ]
   },
   {
@@ -2031,8 +2036,8 @@
    "id": "4911df77-afbd-4f70-9fd8-150b012bfd9e",
    "metadata": {},
    "source": [
-    "## 测试模型的性能   \n",
-    "利用2021年8月1日到2022年4月15日数据测试训练后模型的性能。"
+    "## 测试模型的性能     \n",
+    "利用2021年8月1日到2022年4月15日数据测试训练后模型的性能。在测试阶段，为了避免随机抽样对模型结果的影响，可以考虑测试时利用deterministic_action方法确定行动，即利用DDGP算法的思路，输出唯一确定的policy。"
    ]
   },
   {
@@ -2333,8 +2338,17 @@
    "id": "4acc1635-490e-4422-89cc-c72b18362fbc",
    "metadata": {},
    "source": [
-    "整个模型在测试数据集上表现良好，但由于训练过程仍存在一定的随机性，重复训练后的模型表现可能存在差异。"
+    "1. 无法避免的轨迹随机性。由于训练过程仍存在一定的随机性，重复训练后的模型表现可能存在差异。  \n",
+    "2. 2022年3月中到4月，由于宏观市场环境震荡，科创板市场行情出现较大下跌，此阶段的数据规律和数据模式可能在训练数据中很少见，所以大部分模型的测试结果都显示，模型在2022年3月前保持良好收益，但在3月到4月开始大幅下跌。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bd0fbc7-8234-4e0b-b46b-bad6d6a6d4a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
