--- a/Stock_Trading_AC.ipynb
+++ b/Stock_Trading_AC.ipynb
@@ -1731,6 +1731,9 @@
     "'''尝试将x标准化'''\n",
     "x=(x-np.mean(x))/np.std(x)\n",
     "\n",
+    "x_mean=np.mean(x)\n",
+    "x_std=np.std(x)\n",
+    "\n",
     "acmodel = ACmodel(128,3,T+2)\n",
     "trader2=ACagent(initial_capital=10000,stock_list=[stock])\n",
     "mrk1=market_env(train_data,stock)"
@@ -2063,7 +2066,7 @@
     "'''直接利用价格作为模型输入'''\n",
     "x=np.array([one_stock_test[i-T:i] for i in range(T,len(one_stock_test))])\n",
     "'''尝试将x标准化'''\n",
-    "x=(x-np.mean(x))/np.std(x)\n",
+    "x=(x-x_mean)/x_std\n",
     "trader_test_performance=ACagent(initial_capital=10000,stock_list=[stock])\n",
     "test_mrk=market_env(test_data,stock)"
    ]
